--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "tailwind:css": "npx tailwindcss -i ./public/stylesheets/style.css -o ./public/stylesheets/tailwind.css --watch"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
@@ -15,10 +16,12 @@
     "express": "~4.16.1",
     "express-async-handler": "^1.2.0",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "mongoose": "^8.0.2",
     "morgan": "~1.9.1",
-    "passport": "^0.7.0"
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
