--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
   "name": "swift-post",
   "version": "0.0.0",
+  "engines": {
+    "node": ">=v20.9.0"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "tailwind:css": "npx tailwindcss -i ./public/stylesheets/style.css -o ./public/stylesheets/tailwind.css --watch"
+    "tailwind:css": "npx tailwindcss -i ./public/stylesheets/style.css -o ./public/stylesheets/tailwind.css --watch",
+    "build:tailwind": "npx tailwindcss -i ./public/stylesheets/style.css -o ./public/stylesheets/tailwind.css"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
@@ -21,8 +28,10 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.0.2",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
